--- a/index.html
+++ b/index.html
@@ -4,78 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./dist/output.css" rel="stylesheet" />
-    <title>Anime Watching List</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>Sign Up</title>
   </head>
-  <header>
-    <nav>
-      <div class="bg-slate-200">
-        <div class="flex justify-between h-16 px-10 shadow items-center">
-          <div class="flex items-center space-x-8">
-            <h1 class="text-xl lg:text-2xl font-bold cursor-pointer">
-              Anime Reading List
-            </h1>
-            <div class="hidden md:flex justify-around space-x-4">
-              <a href="#" class="hover:text-indigo-600 text-gray-700">Anime</a>
-              <a href="#" class="hover:text-indigo-600 text-gray-700">Manga</a>
-              <a href="#" class="hover:text-indigo-600 text-gray-700"
-                >Community</a
-              >
-              <a href="#" class="hover:text-indigo-600 text-gray-700">About</a>
-            </div>
+  <body>
+    <div class="wrapper login">
+      <div class="container">
+        <div class="col-left">
+          <div class="login-text">
+            <h2>Anime Watchlist</h2>
+            <p>Sign your account in.</p>
+            <a href="/signin/signin.html" class="btn">Sign In</a>
           </div>
-          <div class="flex space-x-4 items-center">
-            <a href="#" class="text-gray-800 text-sm">LOGIN</a>
-            <a
-              href="#"
-              class="bg-indigo-600 px-4 py-2 rounded text-white hover:bg-indigo-500 text-sm"
-              >SIGNUP</a
-            >
+        </div>
+        <div class="col-right">
+          <div class="login-form">
+            <h2>Sign Up</h2>
+            <form action="">
+              <p>
+                <label>Email address<span>*</span></label>
+                <input
+                  type="text"
+                  placeholder="Email"
+                  id="registerEmail"
+                  required
+                />
+              </p>
+              <p class="email-validation" id="emailValidation"></p>
+              <p>
+                <label>Password<span>*</span></label>
+                <input
+                  type="password"
+                  placeholder="Password"
+                  id="registerPassword"
+                  required
+                />
+              </p>
+              <p class="password-validation" id="pwValidation"></p>
+              <p>
+                <input type="submit" value="Sign Up" id="registerBtn" />
+              </p>
+            </form>
           </div>
         </div>
       </div>
-    </nav>
-    <div class="h-screen bg-gray-100 flex justify-center">
-      <div class="py-6 px-8 h-80 mt-20 bg-white rounded shadow-xl">
-        <form action="">
-          <div class="mb-6">
-            <label for="name" class="block text-gray-800 font-bold"
-              >Email</label
-            >
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Email..."
-              class="w-full border border-gray-300 py-2 pl-3 rounded mt-2 outline-none focus:ring-indigo-600 :ring-indigo-600"
-            />
-            <span> wrong email </span>
-          </div>
-
-          <div>
-            <label for="email" class="block text-gray-800 font-bold"
-              >Password</label
-            >
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="Password..."
-              class="w-full border border-gray-300 py-2 pl-3 rounded mt-2 outline-none focus:ring-indigo-600 :ring-indigo-600"
-            />
-
-            <a
-              href="#"
-              class="text-sm font-thin text-gray-800 hover:underline mt-2 inline-block hover:text-indigo-600"
-              >Forget Password</a
-            >
-          </div>
-          <butt
-            class="cursor-pointer py-2 px-4 block mt-6 bg-indigo-500 text-white font-bold w-full text-center rounded"
-            >Login</butt
-          >
-        </form>
-      </div>
     </div>
-  </header>
+    <script src="index.js"></script>
+  </body>
 </html>
