--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="login-text">
             <h2>Anime Watchlist</h2>
             <p>Sign your account in.</p>
-            <a href="/signin/signin.html" class="btn">Sign In</a>
+            <a href="./login.html" class="btn">Sign In</a>
           </div>
         </div>
         <div class="col-right">
