add function for validation for adding series

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,106 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./dist/output.css" rel="stylesheet" />
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="./dashboard.css" />
+    <title>CRUD Table</title>
   </head>
-  <body class="bg-slate-200 pt-200">
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-      <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-        <caption
-          class="p-5 text-lg font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800"
+  <body>
+    <header>
+      <h2 class="header-subtitle">Anime Watchlist</h2>
+    </header>
+    <div class="body-container">
+      <div class="input-data">
+        <label>Anime Title</label>
+        <input
+          type="text"
+          class="form-input"
+          id="inputTitle"
+          placeholder="Anime title..."
+        />
+        <span id="errorTitle" style="color: red; display: none"
+          >Title cannot be blank.</span
         >
-          Anime list
-          <p class="mt-1 text-sm font-normal text-gray-500 dark:text-gray-400">
-            List of what you have watched so far
-          </p>
-        </caption>
-        <thead
-          class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+        <label for="seasonOptions">Season</label>
+        <select id="seasonOptions" size="1" placeholder="Select a season...">
+          <option value="Winter">Winter</option>
+          <option value="Spring">Spring</option>
+          <option value="Summer">Summer</option>
+          <option value="Fall">Fall</option>
+        </select>
+        <span id="errorSeason" style="color: red; display: none"
+          >Please choose one.</span
         >
-          <tr>
-            <th scope="col" class="px-6 py-3">Title</th>
-            <th scope="col" class="px-6 py-3">Season</th>
-            <th scope="col" class="px-6 py-3">Year</th>
-            <th scope="col" class="px-6 py-3">Current Status</th>
-            <th scope="col" class="px-6 py-3">
-              <span class="sr-only">Edit</span>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-            <th
-              scope="row"
-              class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-            >
-              I Got a Cheat Skill in Another World and Became Unrivaled in The
-              Real World Too
-            </th>
-            <td class="px-6 py-4">Spring</td>
-            <td class="px-6 py-4">2023</td>
-            <td class="px-6 py-4">Plan to Watch</td>
-            <td class="px-6 py-4 text-right">
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
-              >
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Delete</a
-              >
-            </td>
-          </tr>
-          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-            <th
-              scope="row"
-              class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-            >
-              Heavenly Delusion
-            </th>
-            <td class="px-6 py-4">Spring</td>
-            <td class="px-6 py-4">2023</td>
-            <td class="px-6 py-4">Plan to Watch</td>
-            <td class="px-6 py-4 text-right">
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
-              >
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Delete</a
-              >
-            </td>
-          </tr>
-          <tr class="bg-white dark:bg-gray-800">
-            <th
-              scope="row"
-              class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-            >
-              The Eminence in Shadow
-            </th>
-            <td class="px-6 py-4">Fall</td>
-            <td class="px-6 py-4">2022</td>
-            <td class="px-6 py-4">Completed</td>
-            <td class="px-6 py-4 text-right">
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
-              >
-              <a
-                href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Delete</a
-              >
-            </td>
-          </tr>
-        </tbody>
-      </table>
+        <label for="yearSelect">Year</label>
+        <select id="yearSelect" placeholder="Select a year..."></select>
+        <span id="yearError" style="color: red; display: none"
+          >Please choose one.</span
+        >
+        <label>Current Status</label>
+        <select id="statusOptions">
+          <option value="Plan to Watch">Plan to Watch</option>
+          <option value="Watching">Watching</option>
+          <option value="On Hold">On Hold</option>
+          <option value="Completed">Completed</option>
+          <option value="Dropped">Dropped</option>
+        </select>
+        <span id="errorStatus" style="color: red; display: none">
+          Please choose one.
+        </span>
+        <div class="button-container">
+          <button type="button" class="add-data" id="addData">Add Title</button>
+        </div>
+      </div>
+      <div class="crud-table">
+        <table class="table-fill" id="tableData">
+          <thead>
+            <tr>
+              <th class="text-left">Anime</th>
+              <th class="text-left">Season</th>
+              <th class="text-left">Year</th>
+              <th class="text-left">Current Status</th>
+              <th class="text-left">Action</th>
+            </tr>
+          </thead>
+          <tbody class="table-hover"></tbody>
+        </table>
+      </div>
     </div>
+    <script src="./dashboard.js"></script>
   </body>
 </html>
